@@ -2,6 +2,7 @@
 - implemented isotropic gradation control of anisotropic metric
 - added Barral/McKenzie metric intersection
 - quieted parMETIS debug statements that crashed MPI stdout buffers
+- extended ref_inflatable use an origin at mean of Z min/max
 
 Mon, Apr 14, 2014 : Released Refine 1.8.14
 
